fix global overflow

--- a/src/routing/Routeroutlet/style.scss
+++ b/src/routing/Routeroutlet/style.scss
@@ -8,5 +8,5 @@
     color: black;
     padding: 5px 5px;
     height: 100%;
-    overflow: auto;
+    overflow-y: auto;
 }
